--- a/mainclone/templates/registration/login.html
+++ b/mainclone/templates/registration/login.html
@@ -2,23 +2,28 @@
 {% load bootstrap4 %}
 {% load static %}
 {% block content %}
-<div class="loginform">
-    <div class="icon instaicon"></div>
-    <div class="invitation">
-        <h3 class="invite">Sign up to see photos and videos from your friends.</h3>
-    </div>
-    <form  action="/accounts/login/" method="post">
-      {% csrf_token %}
-      {% bootstrap_form form%}
-        <input type="hidden" name="next" value="/">
-      <div class="form-group" style="text-align: center">
-        <input type="submit" class="btn btn-primary btn-sm" value="Login">
-      </div>
-        <div class="invite" style="margin:0 0 5px 0;">
-            Dont have an account?
-            <a href="/accounts/register">Sign up</a>
+  <div class="login-clean">
+    <form action="/accounts/login/" method="post">
+      <div class="illustration"><img src="/static/img/home-logo.png"></div>
+      {%csrf_token%}
+      {% for field in form %}
+        <div class='fieldWrapper'>
+          <h5 style='text-align:center;font-family"Roboto", sans-serif;font-size:14px;'>{{field.label}}</h5>
+
+          <p style='width:100%;text-align:center;'>{{field}}</p>
         </div>
-    </form>
+        {% for error in field.errors %}
+          <p style="color: red">{{ error }}</p>
+        {% endfor %}
+      {% endfor %}
+      {% if user.is_authenticated%}
+        <input type='hidden' name='next' value='/'>
+        {%endif%}
+
+        <input type="submit" class="btn btn-primary btn-sm" value=' Login ' style='text-align:center;font-family"Roboto", sans-serif;font-size:14px;width:100%;margin-top:20px;'>
+
+      </form>
+
     </div>
-</div>
-{% endblock %}
+
+  {% endblock %}
