--- a/mainclone/templates/navbar.html
+++ b/mainclone/templates/navbar.html
@@ -16,7 +16,7 @@
         <div class="instaicon disc"></div>
         <div class="instaicon like"></div>
         <a href="{% url 'myaccount' %}" class="instaicon pers"></a>
-        <a href="/admin" class="admin"><img src="static/img/admin.png" style="background-position-x:-450px; background-position-y: -150px; margin-left: 30px; margin-top: 0px; margin-bottom: 12px;height: 24px; width:24px;"></a>
+        <a href="/admin" class="admin"><img src="static/img/admin.png" style="background-position-x:-450px; background-position-y: -150px; margin-left: 30px;  margin-bottom: 12px;height: 24px; width:24px;"></a>
       </span>
     </nav>
   </div>
