profile is added

--- a/mainclone/templates/registration/login.html
+++ b/mainclone/templates/registration/login.html
@@ -16,6 +16,7 @@
         Dont have an account?
         <a href="/accounts/register">Sign up</a>
       </div>
+      <input type="hidden" name="next" value="{{next}}">
     </form>
   </div>
 </div>
