--- a/mainclone/templates/registration/registration_form.html
+++ b/mainclone/templates/registration/registration_form.html
@@ -10,13 +10,13 @@
       {% csrf_token %}
       {% bootstrap_form form%}
       <div class="form-group" style="text-align: center">
-        <input type="submit" class="btn btn-primary btn-sm" value="Login">
+        <input type="submit" class="btn btn-primary btn-sm" value="Signup">
         <div class="invite" style="margin:0 0 5px 0;">
           Do you have an account?
-          <a href="/accounts/login">login</a>
+          <a href="/accounts/login">Login</a>
         </div>
       </div>
-
+      <input type="hidden" name="next" value="{{next}}">
     </form>
   </div>
 </div>
